--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,22 @@
             <div class="menu-item">
               <span>Lineup</span>
             </div>
-            <div class="menu-item">
+            <div class="menu-item group">
               <span>Tickets</span>
+              <div
+                class="absolute right-0 top-full hidden whitespace-nowrap rounded-b-md bg-pink-500 text-right group-hover:block"
+              >
+                <div
+                  class="p-4 font-bold hover:bg-white/5 hover:text-zinc-200 transition-colors ease-in-out cursor-pointer text-pink-200"
+                >
+                  <span> Single day ticket </span>
+                </div>
+                <div
+                  class="p-4 font-bold hover:bg-white/5 hover:text-zinc-200 transition-colors ease-in-out cursor-pointer text-pink-200"
+                >
+                  <span> 7 day ticket </span>
+                </div>
+              </div>
             </div>
             <div class="menu-item">
               <span>Support</span>
