feat: Add sub menu for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,15 @@
             mobileMenuIcon.classList.add("open");
           }
         });
+
+        const ticketMenuItem = document.getElementById("ticket-menu-item");
+        ticketMenuItem.addEventListener("click", () => {
+          if (ticketMenuItem.classList.contains("open")) {
+            ticketMenuItem.classList.remove("open");
+          } else {
+            ticketMenuItem.classList.add("open");
+          }
+        });
       };
     </script>
   </head>
@@ -31,8 +40,9 @@
               tw:<span class="text-sky-900">mf</span>
             </div>
           </div>
+
           <div class="block md:hidden ml-auto pr-4 my-auto cursor-pointer">
-            <button id="mobile-menu-button" class="group">
+            <button id="mobile-menu-button" class="group peer">
               <div
                 class="top-0 w-8 bg-zinc-200 rounded-full h-1 group-open:rotate-45 transition-all group-open:top-2 relative"
               ></div>
@@ -43,6 +53,40 @@
                 class="top-0 w-8 bg-zinc-200 rounded-full h-1 mt-1 group-open:-rotate-45 transition-all group-open:-top-2 relative"
               ></div>
             </button>
+
+            <div
+              class="absolute top-[62px] bg-gradient-to-r from-rose-500 to-pink-500 w-full left-0 peer-open:block hidden"
+            >
+              <div
+                class="relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 hover:text-zinc-200 transition-colors hover:bg-white/10"
+              >
+                <span>Home</span>
+              </div>
+              <div
+                class="relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 hover:text-zinc-200 transition-colors hover:bg-white/10"
+              >
+                <span>Lineup</span>
+              </div>
+              <div
+              id="ticket-menu-item"
+                class="group relative h-full cursor-pointer text-pink-200 hover:text-zinc-200 transition-colors hover:bg-white/10"
+              >
+                <div class="p-4 text-center font-bold">Tickets</div>
+                <div class="hidden group-open:block">
+                  <div class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out">
+                    <span>Single day ticket</span>
+                  </div>
+                  <div class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out">
+                    <span>7 day ticket</span>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="relative flex h-full cursor-pointer items-center justify-center p-4 font-bold text-pink-200 hover:text-zinc-200 transition-colors hover:bg-white/10"
+              >
+                <span>Support</span>
+              </div>
+            </div>
           </div>
 
           <div class="md:flex hidden flex-1 items-center justify-end">
