--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,13 @@
             </div>
           </div>
         </nav>
+
+        <!-- Hero section -->
+        <div\
+        class="bg-[url('/src/assets/images/hero.jpg')] bg-cover bg-center bg-fixed flex flex-col items-center justify-center h-[calc(100vh-200px)] min-h-[400px]">
+
+        </div>
+
       </header>
     </main>
   </body>
