--- a/src/index.html
+++ b/src/index.html
@@ -68,15 +68,19 @@
                 <span>Lineup</span>
               </div>
               <div
-              id="ticket-menu-item"
+                id="ticket-menu-item"
                 class="group relative h-full cursor-pointer text-pink-200 hover:text-zinc-200 transition-colors hover:bg-white/10"
               >
                 <div class="p-4 text-center font-bold">Tickets</div>
                 <div class="hidden group-open:block">
-                  <div class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out">
+                  <div
+                    class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out"
+                  >
                     <span>Single day ticket</span>
                   </div>
-                  <div class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out">
+                  <div
+                    class="text-center p-4 relative text-pink-200 hover:text-zinc-200 hover:bg-white/5 transition-colors ease-in-out"
+                  >
                     <span>7 day ticket</span>
                   </div>
                 </div>
@@ -120,11 +124,57 @@
         </nav>
 
         <!-- Hero section -->
-        <div\
-        class="bg-[url('/src/assets/images/hero.jpg')] bg-cover bg-center bg-fixed flex flex-col items-center justify-center h-[calc(100vh-200px)] min-h-[400px]">
-
+        <div
+          class="bg-[url('/src/assets/images/hero.jpg')] bg-cover bg-center bg-fixed flex flex-col items-center justify-center h-[calc(100vh-200px)] min-h-[400px]"
+        >
+          <div
+            class="rounded-xl bg-white/30 px-4 py-2 text-center backdrop-blur-md"
+          >
+            <div class="relative">
+              <img src="./assets/images/logo.png" width="175" />
+              <div class="mb-5 mt-[-70px] flex items-center justify-center">
+                <div
+                  class="flex h-14 w-14 items-center justify-center gap-1 rounded-full bg-pink-500"
+                >
+                  <div
+                    class="h-2 w-1 animate-wavey rounded-full bg-pink-300"
+                  ></div>
+                  <div
+                    class="h-3 w-1 animate-wavey rounded-full bg-pink-200 animation-delay-200"
+                  ></div>
+                  <div
+                    class="h-4 w-1 animate-wavey rounded-full bg-pink-100 animation-delay-[150ms]"
+                  ></div>
+                  <div
+                    class="h-3 w-1 animate-wavey rounded-full bg-pink-200 animation-delay-300"
+                  ></div>
+                  <div
+                    class="h-2 w-1 animate-wavey rounded-full bg-pink-300 animation-delay-[75ms]"
+                  ></div>
+                </div>
+              </div>
+            </div>
+            <div class="text-5xl font-bold">
+              tw:<span class="text-sky-900">mf</span>
+            </div>
+          </div>
+          <div class="mt-3 text-sm font-bold">
+            Keep me updated with news and promotions
+          </div>
+          <form class="mt-3 flex gap-2">
+            <input
+              type="email"
+              placeholder="Email"
+              class="rounded-sm border border-white/40 bg-white/30 p-2 font-bold text-sky-900 placeholder-zinc-500 caret-pink-500 outline-1 outline-pink-500 backdrop-blur-md focus:outline-2 focus:outline-solid"
+            />
+            <button
+              type="submit"
+              class="cursor-pointer rounded-sm bg-pink-500 px-4 py-2 font-bold transition-colors hover:bg-sky-900 hover:shadow-lg hover:shadow-black/20"
+            >
+              Subscribe
+            </button>
+          </form>
         </div>
-
       </header>
     </main>
   </body>
