--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,23 @@
           </form>
         </div>
       </header>
+
+      <!-- Content -->
+      <div
+        class="mx-auto mt-20 max-w-screen-lg text-zinc-900 dark:text-zinc-200"
+      >
+        <h2>
+          <span
+            class="bg-gradient-to-r from-cyan-500 to-pink-500 bg-clip-text text-transparent"
+            >Headliners</span
+          >
+        </h2>
+        <p>
+          Experience the sonic delight from these made-up artists across 7 days
+          that music fans are calling “one of the many gigs that will happen
+          this year”
+        </p>
+      </div>
     </main>
   </body>
 </html>
