--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,18 @@
             ticketMenuItem.classList.add("open");
           }
         });
+
+        const previousButton = document.getElementById("previous");
+        const nextButton = document.getElementById("next");
+        const carousel = document.getElementById("carousel");
+        previousButton.addEventListener("click", () => {
+          const itemWidth = carousel.getElementsByTagName("div")[0].clientWidth;
+          carousel.scrollLeft = carousel.scrollLeft - itemWidth;
+        });
+        nextButton.addEventListener("click", () => {
+          const itemWidth = carousel.getElementsByTagName("div")[0].clientWidth;
+          carousel.scrollLeft = carousel.scrollLeft + itemWidth;
+        });
       };
     </script>
   </head>
@@ -195,6 +207,12 @@
         </p>
         <div class="flex">
           <div
+            id="previous"
+            class="relative -top-8 flex cursor-pointer items-center justify-center p-2 text-5xl"
+          >
+            <i class="fas fa-angle-left"></i>
+          </div>
+          <div
             id="carousel"
             class="mt-4 flex w-full flex-1 snap-x gap-4 overflow-x-auto scroll-smooth pb-5"
           >
@@ -254,6 +272,12 @@
               <h5 class="mt-2">Corduroy Gary</h5>
               <h6>1st July 9pm - Main Stage</h6>
             </div>
+          </div>
+          <div
+            id="next"
+            class="relative -top-8 flex cursor-pointer items-center justify-center p-2 text-5xl"
+          >
+            <i class="fas fa-angle-right"></i>
           </div>
         </div>
       </div>
